<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:weightSum="1"
        android:background="@drawable/background_blue_gradient">

        <ImageView
            android:id="@+id/toolbar_back"
            android:layout_width="@dimen/toolbar_icon_width"
            android:layout_height="@dimen/toolbar_height"
            android:clickable="true"
            android:src="@drawable/round_arrow_back_white_36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_page"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large"
            android:layout_marginLeft="@dimen/margin_30"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_images"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_200"
        android:layout_gravity="center_vertical"
        android:clipToPadding="false"
        android:divider="@null"
        android:fillViewport="true"
        android:orientation="horizontal"
        android:overScrollMode="never"
        android:showDividers="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_large">

        <!--name  OK-->
        <!--photo-->
        <!--categories  OK-->
        <!--hours of operation-->
        <!--address OK-->
        <!--contact info OK-->
        <!--Ratings OK-->
        <!--snippet-->
        <!--Deals-->

        <TextView
            android:id="@+id/business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_business_name"
            android:textSize="@dimen/text_25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_small"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_small">

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                style="?android:attr/ratingBarStyleSmall"/>

            <TextView
                android:id="@+id/review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_normal"
                android:text="0 Reviews"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_cuisine_type"
                android:textSize="@dimen/text_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_normal"/>

        </LinearLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_address"
            android:textSize="@dimen/text_small"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:id="@+id/display_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textSize="@dimen/text_small"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:id="@+id/opening_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_hour"
            android:textSize="@dimen/text_small"
            android:textColor="@color/green"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:id="@+id/closing_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closing_hour"
            android:textSize="@dimen/text_small"
            android:textColor="@color/red"
            android:layout_marginBottom="@dimen/margin_small"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>