<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue_gradient">

    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:orientation="vertical"
                android:gravity="center|right">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_blue_gradient"
                    android:orientation="horizontal"
                    android:gravity="center|right">
                    <EditText
                        android:id="@+id/search_business_edittext"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_40"
                        android:layout_weight="9"
                        android:layout_marginLeft="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:paddingTop="@dimen/margin_normal"
                        android:paddingBottom="@dimen/margin_normal"
                        android:paddingStart="@dimen/text_large"
                        android:background="@drawable/border_edittext"
                        android:hint="@string/search_business"
                        android:textSize="@dimen/text_small"
                        android:singleLine="true">
                    </EditText>

                    <ImageView
                        android:id="@+id/search_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_large"
                        android:layout_weight="1"
                        android:ems="10"
                        android:src="@drawable/button_search"
                        android:gravity="center"
                        android:visibility="visible">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/search_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:gravity="center|right"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/search_location_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:ems="10"
                        android:hint="@string/search_location"
                        android:drawableLeft="@drawable/ic_map_marker_grey600_24dp"
                        android:drawablePadding="@dimen/margin_normal"
                        android:textSize="@dimen/text_small"
                        android:background="@null"
                        android:singleLine="true">
                    </EditText>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".5dp"
                        android:background="@color/grey"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/current_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:gravity="center|right"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/current_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:text="@string/current_location"
                        android:textColor="@color/blue"
                        android:drawableLeft="@drawable/ic_map_marker_grey600_24dp"
                        android:drawablePadding="@dimen/margin_normal"
                        android:textSize="@dimen/text_small"
                        android:gravity="center_vertical">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/search_business_name_toggle"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_7"
                    android:background="@drawable/toggle_business"
                    android:gravity="center"
                    android:padding="@dimen/margin_20"
                    android:textColor="@color/white"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Business Name"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/search_address_toggle"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_7"
                    android:background="@drawable/toggle_location"
                    android:gravity="center"
                    android:padding="@dimen/margin_20"
                    android:textColor="@color/white"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Location"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/search_cuisine_toggle"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_7"
                    android:background="@drawable/toggle_cuisine"
                    android:gravity="center"
                    android:padding="@dimen/margin_20"
                    android:textColor="@color/white"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Cuisine Type"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/no_item_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/no_items"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <!--<android.support.design.widget.NavigationView-->
        <!--android:id="@+id/navigationView"-->
        <!--android:layout_width="@dimen/margin_200"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:background="@drawable/background_blue_gradient">-->

        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/margin_normal"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--android:id="@+id/nav_home"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:text="@string/home"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="@dimen/text_large" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="1dp"-->
                <!--android:layout_marginTop="@dimen/margin_small"-->
                <!--android:background="@color/white" />-->

        <!--</LinearLayout>-->

    <!--</android.support.design.widget.NavigationView>-->

</android.support.v4.widget.DrawerLayout>